# nascope

./: .env.example  .gitignore  CMakeLists.txt  README.md  build.sh  pom.xml  run.sh
.github/workflows/: build.yml
asdex/: CMakeLists.txt  asdex.cpp  asdex.h  asdex_shell.cpp  asdex_shell.h  atiscache.cpp  atiscache.h  brightness.h  cmdsetup.cpp  cmdsetup.h  cmdslew.cpp  cmdslew.h  colors.h  commands.h  cursors.cpp  cursors.h  datablock.cpp  datablock.h  datablock_types.h  datablocks.cpp  datablocks.h  dbareas.cpp  dbareas.h  dcb.cpp  dcb.h  draw_datablocks.cpp  draw_datablocks.h  draw_runway_closures.cpp  draw_runway_closures.h  draw_targets.cpp  draw_targets.h  draw_temp_areas.cpp  draw_temp_areas.h  draw_video_map.cpp  draw_video_map.h  font.cpp  font.h  lists.cpp  lists.h  main.cpp  (+28 more)
asdex/atis/: atis_cache.cpp  atis_cache.h
asdex/input/: asdex_command.h  datablock_edit_command.cpp  datablock_edit_command.h
asdex/lists/: asdex_text.h  coast_list.cpp  coast_list.h  preview_area.cpp  preview_area.h  screen_list.cpp  screen_list.h
asdex/notams/: runway_closure_cache.cpp  runway_closure_cache.h
asdex/render/: cursors.cpp  datablocks.cpp  datablocks.h  math.cpp  math.h  resources.cpp  runway_closures.cpp  runway_closures.h  scope.cpp  scope.h  screen_line_renderer.cpp  screen_line_renderer.h  targets.cpp  targets.h  temp_areas.cpp  temp_areas.h  videomap.cpp  videomap.h
asdex/surface/: KATL.json  KBDL.json  KBOS.json  KBWI.json  KCLT.json  KDCA.json  KDTW.json  KEWR.json  KFLL.json  KIAD.json  KJFK.json  KLAS.json  KLAX.json  KLGA.json  KMIA.json  KORD.json  KPHL.json  KSAN.json  KSFO.json
asdex/targets/: asdex_target.h  target_cache.cpp  target_cache.h
io/: CMakeLists.txt  atis.cpp  atis.h  smes.cpp  smes.h
math/: CMakeLists.txt  core.cpp  core.h  geom.cpp  geom.h  latlong.cpp  latlong.h
panes/: CMakeLists.txt  display.cpp  display.h  panes.cpp  panes.h
radar/: CMakeLists.txt  tools.cpp  tools.h
reader/notams/: scrape.py
reader/smes/ingest/: SmesConsumer.java
reader/smes/store/: TargetStore.java
reader/stdds/ingest/: SmesConsumer.java  SurfaceTarget.java
reader/stdds/store/: TargetStore.java
renderer/: CMakeLists.txt  README.md  asdex_colors.h  asdex_cursors.cpp  asdex_cursors.h  asdex_math.cpp  asdex_math.h  asdex_resources.cpp  asdex_resources.h  asdex_scope_widget.cpp  asdex_scope_widget.h  bitmap_font.cpp  bitmap_font.h  bitmap_font_renderer.cpp  bitmap_font_renderer.h  builders.cpp  builders.h  cmdbuffer.cpp  cmdbuffer.h  command_buffer.cpp  command_buffer.h  commandbuffer.cpp  commandbuffer.h  datablocks.cpp  datablocks.h  display_emulation.cpp  display_emulation.h  font.cpp  font.h  render_layers.h  renderer.h  renderlayers.h  rgb.h  targets.cpp  targets.h  tessellator.h  videomap.cpp  videomap.h
renderer/geometry/: tessellator.h
renderer/gl/: display_emulation_pass.cpp  display_emulation_pass.h  glu_tessellator.cpp  glutessellator.cpp  ogl.cpp  ogl.h  opengl_renderer.cpp  opengl_renderer.h  openglrenderer.cpp  openglrenderer.h  shaders.cpp  shaders.h
renderer/shaders/: font.vert
renderer/text/: bitmap_font.cpp  bitmap_font.h  bitmap_font_renderer.cpp  bitmap_font_renderer.h
renderer/text/shaders/: font.frag
resources/configs/: KATL.json  KBDL.json  KBOS.json  KBWI.json  KCLT.json  KDCA.json  KDTW.json  KEWR.json  KFLL.json  KIAD.json  KJFK.json  KLAS.json  KLAX.json  KLGA.json  KMIA.json  KORD.json  KPHL.json  KSAN.json  KSFO.json
resources/configs/asdex/: KATL.json  KBDL.json  KBOS.json  KBWI.json  KCLT.json  KDCA.json  KDFW.json  KDTW.json  KEWR.json  KFLL.json  KHOU.json  KIAD.json  KIAH.json  KJFK.json  KLAS.json  KLAX.json  KLGA.json  KMCO.json  KMDW.json  KMEM.json  KMIA.json  KMKE.json  KMSP.json  KORD.json  KPHL.json  KPHX.json  KPVD.json  KSAN.json  KSDF.json  KSEA.json  KSFO.json  KSLC.json  KSNA.json  KSTL.json  PHNL.json
resources/surface/asdex/: KATL.json  KBOS.json  KSAN.json
swim/smes/: pom.xml
tools/atis/: reader.py
tools/notams/: scrape.py
ui/: CMakeLists.txt  menu.cpp  menu.css  resources.qrc
util/: CMakeLists.txt  cache.h  resources.cpp  resources.h
utils/: CMakeLists.txt  math.cpp  math.h  resources.h
