cmake_minimum_required(VERSION 3.16)
project(nascope LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

add_subdirectory(util)
add_subdirectory(math)
add_subdirectory(renderer)
add_subdirectory(radar)
add_subdirectory(panes)
add_subdirectory(io)
add_subdirectory(asdex)
add_subdirectory(ui)
